--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Me-Player</string>
+    <string name="no_recipes_found">no recipes found</string>
 </resources>
