--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="all">All</string>
     <string name="fav">Favourite</string>
     <string name="most_played">Most played</string>
+    <string name="error">Error</string>
 </resources>
