--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="fav">Favourite</string>
     <string name="most_played">Most played</string>
     <string name="error">Error</string>
+    <string name="most_played_header">Played Tracks over 10 times will appear here</string>
+    <string name="notification_channel_name">Music</string>
 </resources>
